--- a/TODO
+++ b/TODO
@@ -24,7 +24,7 @@ Pour le back :
       ✔ ajouter la fonction dans socket.io @done(19-05-24 01:55)
       ✔ recuperer toute les notifs @done(19-05-24 10:55)
       ✔ gerer le fait que l'user soit en ligne @done(19-05-24 01:55)
-      ☐ tablau user is ogin
+      ✔ tablau user is ogin @done(19-05-24 13:52)
       ☐ event notif
   ☐ tester sql insections @started(19-05-24 01:55)
 
