--- a/TODO
+++ b/TODO
@@ -26,6 +26,9 @@ Pour le back :
       ✔ gerer le fait que l'user soit en ligne @done(19-05-24 01:55)
       ✔ tablau user is ogin @done(19-05-24 13:52)
       ✔ event notif @done(19-05-26 10:50)
+
+      ☐ init matche
+      ☐ get matche more virer user "me"
   ☐ tester sql insections @started(19-05-24 01:55)
 
 Pour le front :
