adding notifications socket

--- a/TODO
+++ b/TODO
@@ -30,6 +30,10 @@ Pour le back :
       ✔ init match @done(19-05-28 23:56)
       ✔ get matche more virer user "me" @done(19-05-28 23:56)
 
+      ☐ trouver erreur proxy
+      ✔ routes notifications socket @done(19-05-30 12:04)
+      ☐ filtre de recherche
+
   ☐ tester sql insections @started(19-05-24 01:55)
 
 Pour le front :
